--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -2,9 +2,10 @@ FROM debian:stretch-slim as builder
 
 RUN set -ex \
 	&& apt-get update \
-	&& apt-get install -qq --no-install-recommends ca-certificates dirmngr gpg wget curl \
-	&& rm -rf /var/lib/apt/lists/*
-  for key in \
+	&& apt-get install -qq --no-install-recommends ca-certificates dirmngr gpg wget curl gnupg \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+  && for key in \
     B42F6819007F00F88E364FD4036A9C25BF357DD4 \
     FE3348877809386C \
   ; do \
@@ -34,6 +35,7 @@ FROM debian:stretch-slim
 COPY --from=builder /usr/local/bin/litecoind /usr/local/bin/litecoin-cli /usr/local/bin/
 RUN groupadd -r litecoin && useradd -r -m -g litecoin litecoin \
 	&& ln -s /usr/local/bin/litecoin-cli /usr/local/bin/c
+
 
 ENV GOSU_VERSION=1.10
 
