--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:stretch-slim as builder
 RUN set -ex \
 	&& apt-get update \
 	&& apt-get install -qq --no-install-recommends ca-certificates dirmngr gpg wget \
-  && apt-get install -y curl gnupg \
+  && apt-get install -y curl curl-dev gnupg \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
   && gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4
@@ -30,7 +30,7 @@ RUN groupadd -r litecoin && useradd -r -m -g litecoin litecoin \
 	&& ln -s /usr/local/bin/litecoin-cli /usr/local/bin/c
 
 
-ENV GOSU_VERSION=1.10
+ENV GOSU_VERSION=1.11
 
 RUN curl -o /usr/local/bin/gosu -fSL https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-$(dpkg --print-architecture) \
   && curl -o /usr/local/bin/gosu.asc -fSL https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-$(dpkg --print-architecture).asc \
@@ -38,7 +38,6 @@ RUN curl -o /usr/local/bin/gosu -fSL https://github.com/tianon/gosu/releases/dow
   && rm /usr/local/bin/gosu.asc \
   && chmod +x /usr/local/bin/gosu
 
-ENV LITECOIN_VERSION=0.17.1
 ENV LITECOIN_DATA=/home/litecoin/.litecoin
 
 
